Worked on main and added WIP BG

--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
+<title>Will's Page</title>
 <html>
+    <head>
+        <link rel="stylesheet" href="titlestyle.css">
+    </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <!--
+    <div class="dropdown">
+        <button class="dropbtn">Dropdown</button>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+    </div> -->
+    
+    <h1>will slyman</h1>
+    <hr>
+    <p>
+        Games, Shit, Poop
+    </p>
+    <hr>
+
+    <div class="bodydiv">
+        <p>Hi!<br>
+            My name is Will Slyman. Blah Blah Blah</p>
+    </div>
 </body>
 </html>
