Improved BG and added buttons

--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
           <a href="#">Link 3</a>
         </div>
     </div> -->
-    
+    <br>
+
     <h1>will slyman</h1>
+
+    <br>
+
     <hr>
-    <p>
-        Games, Shit, Poop
-    </p>
     <hr>
+        <div class="tilebar">
+            <button class="button_games"></button>
+            <button class="button_music"></button>
+            <button class="button_about"></button>
+        </div>
+    <hr>
+    <hr>
+    
+    <br>
 
     <div class="bodydiv">
         <p>Hi!<br>
