Added Games Page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,32 @@
 
     <h1>will slyman</h1>
 
+    
+    <div style="text-align: center; margin-top: 32px; margin-bottom: 0px; word-spacing: 32px;">
+        <div class="tooltip">
+            <a href="mailto:willslyman@gmail.com" class="contactbutton" style="background-image: url(assets/button_email.png);""></a>
+            <span class="tooltiptext" style="left: 50%; bottom: 80%; margin-left: -80px;">willslyman@gmail.com</span>
+        </div>
+        <div class="tooltip">
+            <a href="https://www.linkedin.com/in/william-slyman/" class="contactbutton" style="background-image: url(assets/button_linkedin.png);"></a>
+            <span class="tooltiptext" style="width: 300px; margin-left: -150px; top: 90%; left: 50%;">https://www.linkedin.com/in/william-slyman/</span>
+        </div>
+        <div class="tooltip">
+            <a href="https://pretzol.itch.io/" button class="contactbutton" style="background-image: url(assets/button_itch.png);"></a>
+            <span class="tooltiptext" style="left: 50%; bottom: 80%; margin-left: -80px;">https://pretzol.itch.io/</span>
+        </div>
+        <div class="tooltip">
+            <a href="https://github.com/whs220" class="contactbutton" style="background-image: url(assets/button_github.png);"></a>
+            <span class="tooltiptext" style="width: 200px; margin-left: -100px; top: 90%; left: 50%;">https://github.com/whs220</span>
+        </div>
+    </div>
+
     <br>
 
     <hr>
     <hr>
         <div class="tilebar">
-            <button class="button_games"></button>
+            <a href="games.html" class="button_games"></a>
             <button class="button_music"></button>
             <button class="button_about"></button>
         </div>
@@ -33,8 +53,11 @@
     <br>
 
     <div class="bodydiv">
-        <p>Hi!<br>
-            My name is Will Slyman. Blah Blah Blah</p>
+        <p style="letter-spacing: 1px; line-gap-override: 5px;">Hi!<br>
+            My name is Will Slyman, and I'm a college student currently studying Computer Science.<br>
+            I'm experienced with many programming languages, including Python, C#, C, Java, and JavaScript.<br>
+            In my free time I like making video games and music, which you will find here!<br>
+
     </div>
 </body>
 </html>
