Hopefully fixed main buttons

--- a/games.html
+++ b/games.html
@@ -33,15 +33,17 @@
         </div>
     </span>
 
-    <h2>Games you can play right now!</h2>
-    <div class="gradbar2"></div>
-    <div class="games_holder">
-        <a href="https://pretzol.itch.io/you-have-5-seconds" id="game_button" style="background-image: url(assets/game_5sec.png);"></a>
-        <a href="https://sockman.itch.io/direct-current" id="game_button" style="background-image: url(assets/game_dc.png);"></a>
-        <a href="https://armedturret.itch.io/cave-plague" id="game_button" style="background-image: url(assets/game_cp.png);"></a>
-        <a href="https://pretzol.itch.io/antondisk" id="game_button" style="background-image: url(assets/game_anton.png);"></a>
-        <a href="https://pretzol.itch.io/the-pain-train-of-time" id="game_button" style="background-image: url(assets/game_ptot.png);"></a>
-        <a href="https://pretzol.itch.io/caveflame" id="game_button" style="background-image: url(assets/game_cf.png);"></a>
+    <div style="margin-left: 5%; margin-right: 5%;">
+        <h2>Games you can play right now!</h2>
+        <div class="gradbar2"></div>
+        <div class="games_holder">
+            <a href="https://pretzol.itch.io/you-have-5-seconds" id="game_button" style="background-image: url(assets/game_5sec.png);"></a>
+            <a href="https://sockman.itch.io/direct-current" id="game_button" style="background-image: url(assets/game_dc.png);"></a>
+            <a href="https://armedturret.itch.io/cave-plague" id="game_button" style="background-image: url(assets/game_cp.png);"></a>
+            <a href="https://pretzol.itch.io/antondisk" id="game_button" style="background-image: url(assets/game_anton.png);"></a>
+            <a href="https://pretzol.itch.io/the-pain-train-of-time" id="game_button" style="background-image: url(assets/game_ptot.png);"></a>
+            <a href="https://pretzol.itch.io/caveflame" id="game_button" style="background-image: url(assets/game_cf.png);"></a>
+        </div>
     </div>
 
     <!--
