Added Music & About

--- a/games.html
+++ b/games.html
@@ -17,9 +17,9 @@
     <br>
     <div style="text-align: center; word-spacing: 32px;">
        <a class="title_link" href="index.html">Home</a>
-       <a class="title_link" href="index.html">Games</a>
-       <a class="title_link" href="index.html">Music</a>
-       <a class="title_link" href="index.html">About</a>
+       <a class="title_link" href="games.html">Games</a>
+       <a class="title_link" href="music.html">Music</a>
+       <a class="title_link" href="about.html">About</a>
     </div>
 
     <br>
