--- a/index.html
+++ b/index.html
@@ -53,11 +53,32 @@
     <br>
 
     <div class="bodydiv">
-        <p style="letter-spacing: 1px; line-gap-override: 5px;">Hi!<br>
+        <p style="letter-spacing: 1px; line-gap-override: 5px;">Hi! Welcome to my Website!<br><br>
             My name is Will Slyman, and I'm a college student currently studying Computer Science.<br>
             I'm experienced with many programming languages, including Python, C#, C, Java, and JavaScript.<br>
             In my free time I like making video games and music, which you will find here!<br>
-
     </div>
+
+    <br>
+
+    <div style="text-align: center; width: 100%; margin: auto; display: flex; justify-content: center;">
+        <div class="bottomdiv" style="outline-color: cyan;">
+            <h2>Latest Game!!</h2>
+            <a href="https://pretzol.itch.io/you-have-5-seconds" id="game_button" style="background-image: url(assets/game_5sec.png);"></a>
+        </div>
+
+        <div class="bottomdiv" style="outline-color: violet;">
+            <h2>Listen to This!!</h2>
+            <br>
+            <audio controls controlsList="nodownload" style="width: 80%;">
+                <source src="assets/music/haunted.mp3" type="audio/mpeg">
+                Your browser does not support the audio player! Try switching browsers, or just imagining what the song sounds like.
+            </audio>
+        </div>
+    </div>
+
+    <br>
+    <br>
+
 </body>
 </html>
