MVP of website is working!

--- a/about.html
+++ b/about.html
@@ -19,26 +19,41 @@
         <a class="title_link" href="index.html">Home</a>
         <a class="title_link" href="games.html">Games</a>
         <a class="title_link" href="music.html">Music</a>
-        <a class="title_link" href="about.html">About</a>
+        <a class="title_link" href="about.html">Resume</a>
     </div>
 
     <br>
-    <h1>resume</h1>
+    <h1>about</h1>
     <h2 style="text-align: center;"></h2>
     <br>
 
-    <div style="text-align: center;">
+    <div class="bodydiv">
+        <p style="letter-spacing: 1px; line-gap-override: 5px;">Hi!<br><br>
+          My name is Will Slyman, and I'm a college student currently studying Computer Science at the Rochester Institute of Technology.<br><br>
+
+          I'm experienced with many programming languages, including Python, C, C#, Java, JavaScript, GDScript, CSS, HTML, Angular, REST, & Spring.<br><br>
+          I'm also very experienced with Visual Studio, Visual Studio Code, Unity, and Godot.<br><br>
+          
+          Outside of programming, I enjoy making music with FL Studio and running.<br><br>
+
+          Feel free to take a look at my resume, featured below.
+    </div>
+
+    <br>
+    <br>
+
+    <div class="resdiv">
         <object
           data="assets/Will-Slyman-Resume.pdf"
           type="application/pdf"
-          width="500"
-          height="678"
+          width=100%
+          height=100%
         >
   
           <iframe
             src="assets/Will-Slyman-Resume.pdf"
-            width="500"
-            height="678"
+            width=100%
+            height=100%
           >
           <p>This browser does not support PDF!</p>
           </iframe>
