--- a/games.html
+++ b/games.html
@@ -19,7 +19,7 @@
        <a class="title_link" href="index.html">Home</a>
        <a class="title_link" href="games.html">Games</a>
        <a class="title_link" href="music.html">Music</a>
-       <a class="title_link" href="about.html">About</a>
+       <a class="title_link" href="about.html">Resume</a>
     </div>
 
     <br>
