--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <br>
 
     <h1>will slyman</h1>
-
     
     <div style="text-align: center; margin-top: 32px; margin-bottom: 0px; word-spacing: 32px;">
         <div class="tooltip">
@@ -44,21 +43,12 @@
     <hr>
         <div class="tilebar">
             <a href="games.html" class="button_games"></a>
-            <button class="button_music"></button>
-            <button class="button_about"></button>
+            <a href="music.html" class="button_music"></a>
+            <a href="about.html" class="button_about"></a>
         </div>
     <hr>
     <hr>
     
-    <br>
-
-    <div class="bodydiv">
-        <p style="letter-spacing: 1px; line-gap-override: 5px;">Hi! Welcome to my Website!<br><br>
-            My name is Will Slyman, and I'm a college student currently studying Computer Science.<br>
-            I'm experienced with many programming languages, including Python, C#, C, Java, and JavaScript.<br>
-            In my free time I like making video games and music, which you will find here!<br>
-    </div>
-
     <br>
 
     <div style="text-align: center; width: 100%; margin: auto; display: flex; justify-content: center;">
