Added new music and updated resume

--- a/music.html
+++ b/music.html
@@ -31,7 +31,7 @@
 
     <!--One-Offs-->
     <div style="text-align: center;">
-        <h2 style="text-align: center;">One-Off Songs!</h2>
+        <h2 style="text-align: center;">Misc Songs!</h2>
     </div>
 
     <div style="margin: auto; margin: 25px; word-spacing: 10px; text-align: center;">
@@ -58,6 +58,24 @@
             <p>Had the urge to make a boss theme.</p>
             <audio controls controlsList="nodownload" style="width: 95%;">
                 <source src="assets/music/bossv2.mp3" type="audio/mpeg">
+                Your browser does not support the audio player! Try switching browsers, or just imagining what the song sounds like.
+            </audio>
+        </div>
+
+        <div class="song" style="border-color: cyan;">
+            <h3>Trenches</h3>
+            <p>First Floor music in MudRogue.</p>
+            <audio controls controlsList="nodownload" style="width: 95%;">
+                <source src="assets/music/trenches.mp3" type="audio/mpeg">
+                Your browser does not support the audio player! Try switching browsers, or just imagining what the song sounds like.
+            </audio>
+        </div>
+
+        <div class="song" style="border-color: cyan;">
+            <h3>Kingdom</h3>
+            <p>My favorite track from another game I am making music for!</p>
+            <audio controls controlsList="nodownload" style="width: 95%;">
+                <source src="assets/music/zombie_kingdom.mp3" type="audio/mpeg">
                 Your browser does not support the audio player! Try switching browsers, or just imagining what the song sounds like.
             </audio>
         </div>
