--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h3>Demo Reel:</h3>
     <iframe width="640" height="360"
     src="https://www.youtube.com/embed/UAunhiQUZ1E"
-    style="margin: auto;text-align: center; display: block; box-sizing: border-box; animation: game_anim 10s; border-width: 5px; border-style: solid;"
+    style="margin: auto;text-align: center; display: block; box-sizing: border-box; animation: game_anim 10s infinite; border-width: 5px; border-style: solid;"
     title="Will Slyman Showcase" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
     </iframe> 
 
