--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <span class="tooltiptext" style="left: 50%; bottom: 80%; margin-left: -80px;">https://pretzol.itch.io/</span>
         </div>
         <div class="tooltip">
-            <a href="https://github.com/whs220" class="contactbutton" style="background-image: url(assets/button_github.png);"></a>
+            <a href="https://github.com/willslyman" class="contactbutton" style="background-image: url(assets/button_github.png);"></a>
             <span class="tooltiptext" style="width: 200px; margin-left: -100px; top: 90%; left: 50%;">https://github.com/whs220</span>
         </div>
     </div>
