--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <br>
 
-    <h3>Demo Reel:</h3>
+    <h3>Demo Reel::</h3>
     <iframe width="640" height="360"
     src="https://www.youtube.com/embed/UAunhiQUZ1E"
     style="margin: auto;text-align: center; display: block; box-sizing: border-box; animation: game_anim 10s infinite; border-width: 5px; border-style: solid;"
