Fixed github button text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="tooltip">
             <a href="https://github.com/willslyman" class="contactbutton" style="background-image: url(assets/button_github.png);"></a>
-            <span class="tooltiptext" style="width: 200px; margin-left: -100px; top: 90%; left: 50%;">https://github.com/whs220</span>
+            <span class="tooltiptext" style="width: 200px; margin-left: -100px; top: 90%; left: 50%;">https://github.com/willslyman</span>
         </div>
     </div>
 
